# flight-agent

./: .gitignore  Dockerfile.frontend  Dockerfile.frontend.prod  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json
backend/: .env  .env.example  Dockerfile  Dockerfile.prod  main.py  pyproject.toml  requirements.txt  run_server.bat  test_weather.py
backend/data/: flights.json  hotels.json  vacations.json
backend/services/: chat_service.py  flight_query_schema.py  rag_service.py  serpapi_flights_service.py  weather_service.py
frontend/: .env.example  .gitignore  App.css  index.html  main.jsx  vite.config.js
frontend/components/: Chat.jsx
frontend/src/: App.css  App.jsx
frontend/src/components/: Chat.jsx
src/: App.jsx
src/components/: Chat.jsx
